--- a/style.css
+++ b/style.css
@@ -4,10 +4,9 @@ body {
 
 header {
   border: 1px solid white;
-  text-align: center ;
+  color: white;
+  text-align: center;
   
-
-
 }
 
 header h1 {
